--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <script defer src="/__/firebase/5.5.8/firebase-storage.js"></script>
     <!-- initialize the SDK after all desired features are loaded -->
     <script defer src="/__/firebase/init.js"></script>
+    <!-- Compiled and minified CSS of Materialize -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
     <style media="screen">
       body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
@@ -31,14 +33,19 @@
     </style>
   </head>
   <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
+    <div class="container">
+        <div class="row">
+            <div class="col s6">
+              <input id="name" class="validate" type="text" placeholder="Name">
+            </div>
+        </div>
+        <div class="row">
+          <div class="col s6">
+            <button class="btn waves-effect waves-light" type="submit" name="action">Submit</button>
+          </div>
+        </div>
     </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
-
+    
     <script>
       document.addEventListener('DOMContentLoaded', function() {
         // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
@@ -61,5 +68,7 @@
         }
       });
     </script>
+    <!-- Compiled and minified JavaScript of Materialize -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   </body>
 </html>
